Remove unnecessary contents

--- a/configs/config.yaml
+++ b/configs/config.yaml
@@ -8,11 +8,11 @@ top_k: 5
 encoding:
   batch_size: 32
   num_workers: 0
-  image_dir: image/
+  image_dir: images/
 
 inference:
-  sketch_path: sketches/house.png
-  caption: "house"
+  sketch_path: sketches/COCO_val2014_000000163852.jpg
+  caption: "a plate of food with a fork and knife"
   save_result_path: retrieval_result.jpg
 
 train:
